# optsim2

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
docs/: optics_engine_guide.md
docs/presentation/: optics_presentation.md
src/optsim2/: __init__.py  main.py  optics_engine.py  shape_detector.py
